Feat: Values Section Responsivity Bamboo

--- a/css/aboutSection.style.css
+++ b/css/aboutSection.style.css
@@ -74,7 +74,7 @@
     color: var(--about-section-text-color);
 
     background-image: url(/images/lua_nova.png);
-    background-size: cover;
+    background-size: contain;
     background-repeat: no-repeat;
 }
 
