--- a/css/valuesSection.style.css
+++ b/css/valuesSection.style.css
@@ -22,19 +22,17 @@
 .values-section-bamboo {
     display: none;
     position: absolute;
-    top: 0;
+    bottom: 0;
     left: 0;
-    height: min(100%, 800px);
-    width: min(35%, 500px);
-    border: solid 1px red;
-    opacity: 0.7;
+    height: 57%;
+    aspect-ratio: 1/4;
     z-index: 1;
 }
 
 /*----------------- Text ---------------------------*/
 .values-section-text-box {
     height: 100%;
-    width: min(100%, 1000px);
+    width: min(100%, 840px);
 
     color: var(--values-section-text-box-color);
     text-align: justify;
@@ -47,7 +45,7 @@
 
 .values-section-text-box-item {
     position: relative;
-    margin: max(10px, 5%) 0px;
+    margin-bottom: max(10px, 2%);
 }
 
 .values-section-text-box-item p {
@@ -55,6 +53,8 @@
     -webkit-line-clamp: 1;
     -webkit-box-orient: vertical;
     overflow: hidden;
+
+    line-height: 18px;
 }
 
 /*----------------- Kanjis ---------------------------*/
@@ -69,13 +69,32 @@
     z-index: 1;
 }
 
-@media (min-width: 360px) and (min-height: 640px) {
-    .values-section-kanjis {
+@media (min-width: 280px) and (min-height: 320px) {
+    .values-section-text-box-item p {
         display: block;
+        -webkit-line-clamp: initial;
+        -webkit-box-orient: horizontal;
+        overflow: visible;
+    }
+}
+
+@media (min-width: 280px) and (min-height: 640px) {
+    .values-section-text-box h2 {
+        margin-bottom: max(10px, 2%)
     }
 
     .values-section-text-box-item {
-        margin-bottom: max(40px, 5%);
+        margin-bottom: max(30px, 4%);
+    }
+}
+
+@media (min-width: 360px) and (min-height: 640px) {
+    .values-section-bamboo {
+        display: block;
+    }
+
+    .values-section-kanjis {
+        display: block;
     }
 
     .values-section-text-box-item:nth-of-type(1),
@@ -91,20 +110,7 @@
     }
 }
 
-@media (min-width: 280px) and (min-height: 320px) {
-    .values-section-text-box-item p {
-        display: block;
-        -webkit-line-clamp: initial;
-        -webkit-box-orient: horizontal;
-        overflow: visible;
-    }
-}
-
 @media (min-width: 640px) and (min-height: 480px) {
-    .values-section-text-box h2 {
-        margin-bottom: max(10px, 5%);
-    }
-
     .values-section-text-box-item p {
         line-height: 20px;
     }
@@ -112,39 +118,53 @@
 
 /* Responsive design for screens equal or larger than 768px */
 @media (min-width: 1024px) and (min-height: 640px) {
+    .values-section-text-box h2 {
+        margin-top: max(20px, 3%);
+        margin-bottom: max(20px, 3%);
+    }
+
+    .values-section-text-box-item {
+        margin-bottom: max(30px, 4%);
+    }
+
     .values-section-text-box-item {
         width: 100% !important;
         margin-left: 0px !important;
     }
 
-    .values-section-kanjis {
-        top: 0px;
-        left: calc(100% + 20px);
-        height: max(60%, 140px);
-    }
-
-    .values-section-text-box-item:nth-of-type(odd) .values-section-kanjis {
-        top: 0px;
-        left: calc(100% + 80px);
-    }
-}
-
-/* Responsive design for screens equal or larger than 1024px */
-/* @media (min-width: 1024px) {
-    .values-section-kanjis {
-        height: 180px;
-        width: 50px;
-    }
-} */
-
-/* Responsive design for screens equal or larger than 1536px */
-/* @media (min-width: 1536px) {
     .values-section-text-box-item p {
         line-height: 35px;
     }
 
     .values-section-kanjis {
-        height: 220px;
-        width: 60px;
+        top: 0px;
+        left: calc(100% + 100px);
+        height: max(60%, 140px);
     }
-} */
+
+    .values-section-text-box-item:nth-of-type(odd) .values-section-kanjis {
+        top: 0px;
+        left: calc(100% + 40px);
+    }
+}
+
+@media (min-width: 1140px) and (min-height: 640px) {
+    .values-section-bamboo {
+        height: 85%;
+        aspect-ratio: 1/3;
+    }
+}
+
+@media (min-width: 1240px) and (min-height: 640px) {
+    .values-section-bamboo {
+        left: max(10px, 2%);
+        height: 90%;
+    }
+}
+
+@media (min-width: 1380px) and (min-height: 640px) {
+    .values-section-bamboo {
+        left: max(20px, 5%);
+        height: 100%;
+    }
+}
