--- a/views/home2.html
+++ b/views/home2.html
@@ -136,7 +136,7 @@
 					<div class="values-section-text-box-item">
 						<img class="values-section-kanjis" src="../images/outros/kansha.png" alt="kansha">
 						<h3 class="h3">Gratidão - <span>kansha.</span></h3>
-						<p class="p">Pelas pessoas, pelas oportunidades, pelo trabalho, pela natureza e pela vida.</p>
+						<p class="p">Às pessoas, às oportunidades, ao trabalho, à natureza e à vida, muito obrigado!</p>
 					</div>
 					<div class="values-section-text-box-item">
 						<img class="values-section-kanjis" src="../images/outros/ganbatte.png" alt="ganbatte">
