Feat: created side midia

--- a/views/home2.html
+++ b/views/home2.html
@@ -14,6 +14,7 @@
 	<link rel="stylesheet" href="/css/valuesSection.style.css">
 	<link rel="stylesheet" href="/css/section.4.style.css">
 	<link rel="stylesheet" href="/css/section.5.style.css">
+	<link rel="stylesheet" href="/css/sideMidia.css">
 </head>
 
 <body>
@@ -50,6 +51,31 @@
 			</div>
 		</nav>
 	</header>
+
+	<!-- Side Midia -->
+	<div class="side-midia-container">
+		<div class="side-midia-item">
+			<a href="" target="_blank">
+				<img src="/images/sideMidia/instagram.jpeg" alt="instagram">
+			</a>
+		</div>
+		<div class="side-midia-item">
+			<a href="" target="_blank">
+				<img src="/images/sideMidia/pinterest.jpeg" alt="pinterest">
+			</a>
+		</div>
+		<div class="side-midia-item">
+			<a href="" target="_blank">
+				<img src="/images/sideMidia/whatsapp.jpeg" alt="whatsapp">
+			</a>
+		</div>
+		<div class="side-midia-item">
+			<a href="" target="_blank">
+				<img src="/images/sideMidia/linkedin.jpeg" alt="linkedin">
+			</a>
+		</div>
+	</div>
+
 
 	<div class="sections-container">
 		<!-- Video Section -->
