--- a/css/sideMidia.css
+++ b/css/sideMidia.css
@@ -1,9 +1,9 @@
 .side-midia-container {
+    display: none;
     position: absolute;
     top: 40%;
     right: 50px;
 
-    display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
@@ -15,4 +15,10 @@
     height: 40px;
     object-fit: cover;
     border-radius: 10px;
+}
+
+@media (min-width: 1024px) and (min-height: 640px) {
+    .side-midia-container {
+        display: flex;
+    }
 }
