--- a/views/home2.html
+++ b/views/home2.html
@@ -12,7 +12,7 @@
 	<link rel="stylesheet" href="/css/aboutCards.style.css">
 	<link rel="stylesheet" href="/css/aboutSection.style.css">
 	<link rel="stylesheet" href="/css/valuesSection.style.css">
-	<link rel="stylesheet" href="/css/section.4.style.css">
+	<link rel="stylesheet" href="/css/servicesSection.style.css">
 	<link rel="stylesheet" href="/css/section.5.style.css">
 	<link rel="stylesheet" href="/css/sideMidia.css">
 </head>
@@ -140,7 +140,7 @@
 			</div>
 		</section>
 
-		<!-- Section 03 -->
+		<!-- Values Section -->
 		<section class="sections">
 			<div class="values-section-content-wrapper">
 				<img class="values-section-bamboo" src="/images/outros/bambu_1.png" alt="bambu">
@@ -170,6 +170,40 @@
 						<p class="p">Seja como o bambu, flexível, e sustente-se nas suas raízes nos momentos de
 							adversidade, e assim como o bambu nas estações chuvosas, cresça (progrida e evolua) em
 							direção ao céu.</p>
+					</div>
+				</div>
+			</div>
+		</section>
+
+		<!-- Navigation Menu -->
+		<section class="sections" id="services">
+			<div class="services-section-content-wrapper">
+				<div class="services-section-text-box">
+					<h2 class="h2">Nossos serviços...</h2>
+					<p class="p">Todos nossos serviços procuram se alinhar com a sua real necessidade de projeto, unindo
+						funcionalidade + estética e claro,<span> você</span>, a chave principal do projeto!</p>
+				</div>
+				<div class="services-section-note-container">
+					<div class="services-section-note-item">
+						<div></div>
+						<h3 class="h3">Reviva Ambientes!</h3>
+						<p class="p">Revitalizar o espaço sem quebra-quebra entregando um ambiente novo e aconchegante.
+						</p>
+					</div>
+					<div class="services-section-note-item">
+						<div></div>
+						<h3 class="h3">Reforma</h3>
+						<p class="p">Reforma de tudo que for necessário e o que o ambiente permitir.</p>
+					</div>
+					<div class="services-section-note-item">
+						<div></div>
+						<h3 class="h3">Prelúdio</h3>
+						<p class="p">Apartamento na planta ou em construção. Decoração com liberdade e economia!</p>
+					</div>
+					<div class="services-section-note-item">
+						<div></div>
+						<h3 class="h3">Consultoria</h3>
+						<p class="p">Recomendações rápidas e práticas, aproveitando o que já existe.</p>
 					</div>
 				</div>
 			</div>
