--- a/views/home2.html
+++ b/views/home2.html
@@ -175,7 +175,7 @@
 			</div>
 		</section>
 
-		<!-- Navigation Menu -->
+		<!-- Services Section -->
 		<section class="sections" id="services">
 			<div class="services-section-content-wrapper">
 				<div class="services-section-text-box">
@@ -183,33 +183,38 @@
 					<p class="p">Todos nossos serviços procuram se alinhar com a sua real necessidade de projeto, unindo
 						funcionalidade + estética e claro,<span> você</span>, a chave principal do projeto!</p>
 				</div>
+
 				<div class="services-section-note-container">
-					<div class="services-section-note-item">
-						<div></div>
-						<h3 class="h3">Reviva Ambientes!</h3>
-						<p class="p">Revitalizar o espaço sem quebra-quebra entregando um ambiente novo e aconchegante.
-						</p>
+					<div class="services-section-note-wrapper">
+						<div class="services-section-note-item">
+							<div></div>
+							<h3 class="h3">Reviva Ambientes!</h3>
+							<p class="p">Revitalizar o espaço sem quebra-quebra entregando um ambiente novo e
+								aconchegante.
+							</p>
+						</div>
+						<div class="services-section-note-item">
+							<div></div>
+							<h3 class="h3">Reforma</h3>
+							<p class="p">Reforma de tudo que for necessário e o que o ambiente permitir.</p>
+						</div>
 					</div>
-					<div class="services-section-note-item">
-						<div></div>
-						<h3 class="h3">Reforma</h3>
-						<p class="p">Reforma de tudo que for necessário e o que o ambiente permitir.</p>
-					</div>
-					<div class="services-section-note-item">
-						<div></div>
-						<h3 class="h3">Prelúdio</h3>
-						<p class="p">Apartamento na planta ou em construção. Decoração com liberdade e economia!</p>
-					</div>
-					<div class="services-section-note-item">
-						<div></div>
-						<h3 class="h3">Consultoria</h3>
-						<p class="p">Recomendações rápidas e práticas, aproveitando o que já existe.</p>
+					<div class="services-section-note-wrapper">
+						<div class="services-section-note-item">
+							<div></div>
+							<h3 class="h3">Prelúdio</h3>
+							<p class="p">Apartamento na planta ou em construção. Decoração com liberdade e economia!</p>
+						</div>
+						<div class="services-section-note-item">
+							<div></div>
+							<h3 class="h3">Consultoria</h3>
+							<p class="p">Recomendações rápidas e práticas, aproveitando o que já existe.</p>
+						</div>
 					</div>
 				</div>
 			</div>
 		</section>
 	</div>
-
 	<script src="/js/app.js"></script>
 </body>
 
