--- a/css/navigation.style.css
+++ b/css/navigation.style.css
@@ -147,8 +147,8 @@
     transform: translateY(-8px) rotate(-45deg);
 }
 
-/* Responsive design for screens equal or larger than 640px */
-@media (min-width: 640px) and (min-height: 480px) {
+@media (min-width: 360px) and (min-height: 768px),
+(min-width: 768px) and (min-height: 360px) {
     .navigation-wrapper {
         padding: 10px;
     }
@@ -173,7 +173,8 @@
 }
 
 /* Responsive design for screens equal or larger than 768px */
-@media (min-width: 768px) and (min-height: 640px) {
+@media (min-width: 768px) and (min-height: 640px),
+(min-width: 640px) and (min-height: 768px) {
     .navigation-wrapper {
         padding: 5px;
     }
@@ -227,8 +228,8 @@
     }
 }
 
-/* Responsive design for screens equal or larger than 1024px */
-@media (min-width: 1024px) and (min-height: 768px) {
+@media (min-width: 1024px) and (min-height: 768px),
+(min-width: 768px) and (min-height: 1024px) {
     .navigation-wrapper {
         padding: 15px;
     }
@@ -261,8 +262,8 @@
     }
 }
 
-/* Responsive design for screens equal or larger than 1536px */
-@media (min-width: 1536px) and (min-height: 1024px) {
+@media (min-width: 1536px) and (min-height: 1024px),
+(min-width: 1024px) and (min-height: 1536px) {
     .navigation-wrapper {
         padding: 20px;
     }
