--- a/views/home2.html
+++ b/views/home2.html
@@ -6,15 +6,15 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Yamamoto Haus</title>
 
-	<link rel="stylesheet" href="/css/home.style.css">
-	<link rel="stylesheet" href="/css/navigation.style.css">
-	<link rel="stylesheet" href="/css/videoSection.style.css">
-	<link rel="stylesheet" href="/css/aboutCards.style.css">
-	<link rel="stylesheet" href="/css/aboutSection.style.css">
-	<link rel="stylesheet" href="/css/valuesSection.style.css">
-	<link rel="stylesheet" href="/css/servicesSection.style.css">
+	<link rel="stylesheet" href="/css/components/home.style.css">
+	<link rel="stylesheet" href="/css/components/navigation.style.css">
+	<link rel="stylesheet" href="/css/components/sideMidia.css">
+	<link rel="stylesheet" href="/css/videoSection/videoSection.style.css">
+	<link rel="stylesheet" href="/css/aboutSection/aboutCards.style.css">
+	<link rel="stylesheet" href="/css/aboutSection/aboutSection.style.css">
+	<link rel="stylesheet" href="/css/valuesSection/valuesSection.style.css">
+	<link rel="stylesheet" href="/css/servicesSection/servicesSection.style.css">
 	<link rel="stylesheet" href="/css/section.5.style.css">
-	<link rel="stylesheet" href="/css/sideMidia.css">
 </head>
 
 <body>
