--- a/views/home2.html
+++ b/views/home2.html
@@ -6,14 +6,20 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Yamamoto Haus</title>
 
+	<!-- Components -->
 	<link rel="stylesheet" href="/css/components/home.style.css">
 	<link rel="stylesheet" href="/css/components/navigation.style.css">
 	<link rel="stylesheet" href="/css/components/sideMidia.css">
+	<!-- Video -->
 	<link rel="stylesheet" href="/css/videoSection/videoSection.style.css">
+	<!-- About -->
 	<link rel="stylesheet" href="/css/aboutSection/aboutCards.style.css">
 	<link rel="stylesheet" href="/css/aboutSection/aboutSection.style.css">
+	<!-- Values -->
 	<link rel="stylesheet" href="/css/valuesSection/valuesSection.style.css">
+	<!-- Services -->
 	<link rel="stylesheet" href="/css/servicesSection/servicesSection.style.css">
+	<link rel="stylesheet" href="/css/servicesSection/servicesNotes.style.css">
 	<link rel="stylesheet" href="/css/section.5.style.css">
 </head>
 
@@ -183,33 +189,36 @@
 					<p class="p">Todos nossos serviços procuram se alinhar com a sua real necessidade de projeto, unindo
 						funcionalidade + estética e claro,<span> você</span>, a chave principal do projeto!</p>
 				</div>
-
 				<div class="services-section-note-container">
-					<div class="services-section-note-wrapper">
-						<div class="services-section-note-item">
+					<div class="services-section-note-item">
+						<div>
 							<div></div>
-							<h3 class="h3">Reviva Ambientes!</h3>
-							<p class="p">Revitalizar o espaço sem quebra-quebra entregando um ambiente novo e
-								aconchegante.
-							</p>
 						</div>
-						<div class="services-section-note-item">
-							<div></div>
-							<h3 class="h3">Reforma</h3>
-							<p class="p">Reforma de tudo que for necessário e o que o ambiente permitir.</p>
-						</div>
+						<h3 class="h3">Reviva Ambientes!</h3>
+						<p class="p">Revitalizar o espaço sem quebra-quebra entregando um ambiente novo e
+							aconchegante.
+						</p>
 					</div>
-					<div class="services-section-note-wrapper">
-						<div class="services-section-note-item">
+					<div class="services-section-note-item">
+						<div>
 							<div></div>
-							<h3 class="h3">Prelúdio</h3>
-							<p class="p">Apartamento na planta ou em construção. Decoração com liberdade e economia!</p>
 						</div>
-						<div class="services-section-note-item">
+						<h3 class="h3">Reforma</h3>
+						<p class="p">Reforma de tudo que for necessário e o que o ambiente permitir.</p>
+					</div>
+					<div class="services-section-note-item">
+						<div>
 							<div></div>
-							<h3 class="h3">Consultoria</h3>
-							<p class="p">Recomendações rápidas e práticas, aproveitando o que já existe.</p>
 						</div>
+						<h3 class="h3">Prelúdio</h3>
+						<p class="p">Apartamento na planta ou em construção. Decoração com liberdade e economia!</p>
+					</div>
+					<div class="services-section-note-item">
+						<div>
+							<div></div>
+						</div>
+						<h3 class="h3">Consultoria</h3>
+						<p class="p">Recomendações rápidas e práticas, aproveitando o que já existe.</p>
 					</div>
 				</div>
 			</div>
