--- a/views/home2.html
+++ b/views/home2.html
@@ -19,7 +19,7 @@
 	<link rel="stylesheet" href="/css/valuesSection/valuesSection.style.css">
 	<!-- Services -->
 	<link rel="stylesheet" href="/css/servicesSection/servicesSection.style.css">
-	<link rel="stylesheet" href="/css/servicesSection/servicesNotes.style.css">
+	<!-- <link rel="stylesheet" href="/css/servicesSection/servicesNotes.style.css"> -->
 	<link rel="stylesheet" href="/css/section.5.style.css">
 </head>
 
@@ -190,38 +190,33 @@
 						funcionalidade + estética e claro,<span> você</span>, a chave principal do projeto!</p>
 				</div>
 				<div class="services-section-note-container">
-					<div class="services-section-note-item">
-						<div>
+					<div class="services-section-note-wrapper">
+						<div class="services-section-note-item">
 							<div></div>
+							<h3 class="h3">Reviva Ambientes!</h3>
+							<p class="p">Revitalizar o espaço sem quebra-quebra entregando um ambiente novo e
+								aconchegante.
+							</p>
 						</div>
-						<h3 class="h3">Reviva Ambientes!</h3>
-						<p class="p">Revitalizar o espaço sem quebra-quebra entregando um ambiente novo e
-							aconchegante.
-						</p>
+						<div class="services-section-note-item">
+							<div></div>
+							<h3 class="h3">Reforma</h3>
+							<p class="p">Reforma de tudo que for necessário e o que o ambiente permitir.</p>
+						</div>
 					</div>
-					<div class="services-section-note-item">
-						<div>
+					<div class="services-section-note-wrapper">
+						<div class="services-section-note-item">
 							<div></div>
+							<h3 class="h3">Prelúdio</h3>
+							<p class="p">Apartamento na planta ou em construção. Decoração com liberdade e economia!</p>
 						</div>
-						<h3 class="h3">Reforma</h3>
-						<p class="p">Reforma de tudo que for necessário e o que o ambiente permitir.</p>
-					</div>
-					<div class="services-section-note-item">
-						<div>
+						<div class="services-section-note-item">
 							<div></div>
+							<h3 class="h3">Consultoria</h3>
+							<p class="p">Recomendações rápidas e práticas, aproveitando o que já existe.</p>
 						</div>
-						<h3 class="h3">Prelúdio</h3>
-						<p class="p">Apartamento na planta ou em construção. Decoração com liberdade e economia!</p>
-					</div>
-					<div class="services-section-note-item">
-						<div>
-							<div></div>
-						</div>
-						<h3 class="h3">Consultoria</h3>
-						<p class="p">Recomendações rápidas e práticas, aproveitando o que já existe.</p>
 					</div>
 				</div>
-			</div>
 		</section>
 	</div>
 	<script src="/js/app.js"></script>
