--- a/css/servicesSection/servicesSection.style.css
+++ b/css/servicesSection/servicesSection.style.css
@@ -28,7 +28,6 @@
 
     height: 25%;
     width: min(90%, 880px);
-    margin: max(20px, 3%) 5%;
 
     color: var(--services-section-title-color);
     text-align: justify;
@@ -52,9 +51,10 @@
 .services-section-note-container {
     display: flex;
     flex-direction: row;
+    align-self: center;
 
     height: 75%;
-    width: 100%;
+    width: min(1080px, 100%);
 
     overflow-y: scroll;
     overflow-x: hidden;
@@ -107,7 +107,6 @@
 
 .services-section-note-item p {
     font-size: 0.65rem;
-    line-height: 20px;
 }
 
 @media (min-width: 640px) and (min-height: 280px) {
@@ -125,6 +124,7 @@
 
     .services-section-note-wrapper {
         flex-direction: row;
+        align-items: flex-start;
         justify-content: space-around;
     }
 }
@@ -158,6 +158,7 @@
 
     .services-section-note-item p {
         font-size: 0.7rem;
+        line-height: 20px;
     }
 }
 
@@ -194,29 +195,60 @@
     }
 }
 
-/* @media (min-width: 360px) and (min-height: 768px),
-(min-width: 768px) and (min-height: 360px) {
+@media (min-width: 480px) and (min-height: 1024px),
+(min-width: 1024px) and (min-height: 480px) {
+    .services-section-text-box {
+        margin: max(20px, 2%) 5%;
+    }
+
     .services-section-note-item {
-        height: 170px;
-        width: 170px;
+        height: 190px;
+        width: 190px;
+    }
+
+    .services-section-note-item div {
+        top: -18px;
+        height: 30px;
+        width: 30px;
+    }
+
+    .services-section-note-item h3 {
+        margin: 7px 0px;
+        font-size: 1.3rem;
+    }
+
+    .services-section-note-item p {
+        font-size: 0.9rem;
+        line-height: 24px;
+    }
+}
+
+@media (min-width: 1280px) and (min-height: 640px) {
+    .services-section-text-box {
+        margin: max(30px, 2%) 10%;
+    }
+
+    .services-section-note-item {
+        height: 240px;
+        width: 240px;
+    }
+
+    .services-section-note-item div {
+        top: -20px;
+        height: 35px;
+        width: 35px;
     }
 
     .services-section-note-item h3 {
         margin: 10px 0px;
-        font-size: 1.05rem;
+        font-size: 1.5rem;
     }
 
     .services-section-note-item p {
-        font-size: 0.85rem;
+        font-size: 1rem;
+        line-height: 28px;
     }
-} */
-
-/* @media (min-width: 768px) and (min-height: 1024px) {
-    .services-section-note-item {
-        height: 200px;
-        width: 200px;
-    }
-} */
+}
 
 /* @media (min-width: 1024px) and (min-height: 600px) {
     .services-section-note-container {
