--- a/views/home2.html
+++ b/views/home2.html
@@ -19,7 +19,8 @@
 	<link rel="stylesheet" href="/css/valuesSection/valuesSection.style.css">
 	<!-- Services -->
 	<link rel="stylesheet" href="/css/servicesSection/servicesSection.style.css">
-	<!-- <link rel="stylesheet" href="/css/servicesSection/servicesNotes.style.css"> -->
+	<!-- Contact -->
+	<link rel="stylesheet" href="/css/contactSection/contactSection.style.css">
 	<link rel="stylesheet" href="/css/section.5.style.css">
 </head>
 
@@ -217,6 +218,20 @@
 						</div>
 					</div>
 				</div>
+		</section>
+
+		<!-- Contact Section -->
+		<section class="sections" id="contact">
+			<div class="contact-section-content-wrapper">
+				<img class="contact-section-bamboo" src="/images/outros/bambu_2.png" alt="bambu">
+				<div class="contact-red-ball"></div>
+				<div class="contact-section-details">
+					<h2 class="h2">Entre em contato!</h2>
+					<p class="p">(47) 99148-9924</p>
+					<p class="p">yamamotohaus.interiores@gmail.com</p>
+					<p class="p">R. Euzébio de Queirós, 247 - Glória, Joinville </p>
+				</div>
+			</div>
 		</section>
 	</div>
 	<script src="/js/app.js"></script>
