--- a/views/home.html
+++ b/views/home.html
@@ -1,16 +1,26 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Yamamoto Haus</title>
 
-    <link rel="stylesheet" href="/css/home.style.css">
-	<link rel="stylesheet" href="/css/navigation.style.css">
-	<link rel="stylesheet" href="/css/section.1.style.css">
-	<link rel="stylesheet" href="/css/section.2.style.css">
-	<link rel="stylesheet" href="/css/section.3.style.css">
-	<link rel="stylesheet" href="/css/section.4.style.css">
+	<!-- Components -->
+	<link rel="stylesheet" href="/css/components/home.style.css">
+	<link rel="stylesheet" href="/css/components/navigation.style.css">
+	<link rel="stylesheet" href="/css/components/sideMidia.css">
+	<!-- Video -->
+	<link rel="stylesheet" href="/css/videoSection/videoSection.style.css">
+	<!-- About -->
+	<link rel="stylesheet" href="/css/aboutSection/aboutCards.style.css">
+	<link rel="stylesheet" href="/css/aboutSection/aboutSection.style.css">
+	<!-- Values -->
+	<link rel="stylesheet" href="/css/valuesSection/valuesSection.style.css">
+	<!-- Services -->
+	<link rel="stylesheet" href="/css/servicesSection/servicesSection.style.css">
+	<!-- Contact -->
+	<link rel="stylesheet" href="/css/contactSection/contactSection.style.css">
 	<link rel="stylesheet" href="/css/section.5.style.css">
 </head>
 
@@ -33,12 +43,12 @@
 				</li>
 				<li class="navbar-menu-item">
 					<a href="#services" class="navbar-menu-link">Serviços</a>
-				</li>			
+				</li>
 				<li class="navbar-menu-item">
-					<a href="#section-03"  class="navbar-menu-link">Projetos</a>
-				</li>				
+					<a href="" class="navbar-menu-link">Projetos</a>
+				</li>
 				<li class="navbar-menu-item">
-					<a class="navbar-menu-link">Social</a>
+					<a href="#contact" class="navbar-menu-link">Contato</a>
 				</li>
 			</ul>
 			<div id="mobile-navbar">
@@ -49,171 +59,182 @@
 		</nav>
 	</header>
 
-	<!-- Section 01 -->
-	<section class="section" id="#">
-		<div class="section-01-content-wrapper">
-			<video class="section-01-background-video" autoplay loop muted plays-inline>
-				<source src="" type="video/mp4">
-			</video>
-	
-			<div class="section-01-text-box">
-				<h2 class="h2">“A casa do presente, que pensa no futuro e recorda do passado”</h2>
-				<p class="p">Nossa proposta é através da empatia cuidar do presente, valorizar a história e as memórias, e respeitar as futuras gerações.</p>
-				<a class="section-01-button">Conheça nossos projetos</a>
-			</div>
+	<!-- Side Midia -->
+	<div class="side-midia-container">
+		<div class="side-midia-item">
+			<a href="" target="_blank">
+				<img src="/images/sideMidia/instagram.jpeg" alt="instagram">
+			</a>
 		</div>
-	</section>
-
-	<!-- Section 02 -->
-	<section class="section" id="essence">
-		<div class="section-02-content-wrapper">
-
-			<div class="section-02-title-container">
-				<h2 class="h2">“A casa do presente, que pensa no futuro e recorda do passado”</h2>
-			</div>
-
-			<div class="section-02-detail-container">
-				<div class="section-02-card-container">
-
-					<div class="section-02-card">
-						<img src="../images/partners.jpg" alt="Natasha e Hugo">
-					</div>
-
-					<div class="section-02-card">
-						<h3 class="h3">Natasha M. Yamamoto</h3>
-						<img src="../images/character_Natasha.jpg" alt="Natasha Michiko">
-					</div>
-					
-					<div class="section-02-card">
-						<img src="../images/character_Hugo.jpg" alt="Hugo Wegner">
-						<h3 class="h3">Hugo W. de Moura Nessler</h3>
-					</div>
-				</div>
-			
-				<div class="section-02-text-box">
-					<h3 class="h3">Nossa essência</h3>
-					<p class="p">Nascida de um propósito de vida, a Yamamoto Haus acredita no poder do ambiente em influenciar nossa saúde, bem-estar e comportamento e em como a natureza é uma grande influência nesse processo.  Visto isso, nosso escritório deseja oferecer através do design biofílico, soluções inteligentes que promovam uma experiência única e alinhada com a essência de cada indivíduo e tornar da casa um local que promova saúde, conforto ambiental e bem-estar, através da sustentabilidade e tecnologia.</p>       
-				</div>
-			</div>
-
+		<div class="side-midia-item">
+			<a href="" target="_blank">
+				<img src="/images/sideMidia/pinterest.jpeg" alt="pinterest">
+			</a>
 		</div>
-	</section>
-
-	<!-- Section 03 -->
-	<section class="section">
-		<div class="section-03-content-wrapper">
-
-			<div class="section-03-bamboo">
-				<img src="/images/outros/bambu_1.png" alt="bambu">
-			</div>
-
-			<div class="section-03-text-box">
-				<h2 class="h2">Nossos valores...</h2>
-				<div class="section-03-text-box-item">
-					<h3 class="h3">Empatia, cuidado e consideração - <span>omoiyari.</span></h3>
-					<p class="p">Cuidar do presente, das pessoas e de sí mesmo, preservar a vida, criar conexões, valorizar as origens e respeitar as futuras gerações.</p>
-				</div>
-				<div class="section-03-text-box-item">
-					<h3 class="h3">Emendar com ouro - <span>kintsugi.</span></h3>
-					<p class="p">Errar é humano. Nossa missão é ressignificar o erro em aprendizado, permitindo a evolução contínua como pessoas e profissionais.</p>
-				</div>
-				<div class="section-03-text-box-item">
-					<h3 class="h3">Gratidão - <span>kansha.</span></h3>
-					<p class="p">Pelas pessoas, pelas oportunidades, pelo trabalho, pela natureza e pela vida.</p>
-				</div>
-				<div class="section-03-text-box-item">
-					<h3 class="h3">Faça o melhor que puder e nunca desista - <span>ganbatte.</span></h3>
-					<p class="p">Seja como o bambu, flexível, e sustente-se nas suas raízes nos momentos de adversidade, e assim como o bambu nas estações chuvosas, cresça (progrida e evolua) em direção ao céu.</p>
-				</div>
-			</div>
-
-			<div class="section-03-kanjis">
-				<div class="section-03-kanji-column">
-					<img src="../images/outros/omoiyari.png" alt="omoiyari">
-					<img src="../images/outros/kansha.png" alt="kansha">
-				</div>
-				<div class="section-03-kanji-column">
-					<img src="../images/outros/kintsugi.png" alt="kintsugi">
-					<img src="../images/outros/ganbatte.png" alt="ganbatte">
-				</div>
-			</div>
+		<div class="side-midia-item">
+			<a href="" target="_blank">
+				<img src="/images/sideMidia/whatsapp.jpeg" alt="whatsapp">
+			</a>
 		</div>
-	</section>
-
-	<!-- Section 04 -->
-	<section class="section" id="services">
-		<div class="section-04-content-wrapper">
-
-			<div class="section-04-text-box">
-				<h2 class="h2">Nossos serviços...</h2>
-				<p class="p">Todos nossos serviços procuram se alinhar com a sua real necessidade de projeto, unindo funcionalidade + estética e claro,<span> você</span>, a chave principal do projeto!</p>
-			</div>
-
-			<div class="section-04-note-container">
-				<div class="section-04-note-item">
-					<div></div>
-					<h3 class="h3">Reviva Ambientes!</h3>
-					<p class="p">Revitalizar o espaço sem quebra-quebra entregando um ambiente novo e aconchegante.</p>
-				</div>
-				<div class="section-04-note-item">
-					<div></div>
-					<h3 class="h3">Reforma</h3>
-					<p class="p">Reforma de tudo que for necessário e o que o ambiente permitir.</p>
-				</div>
-				<div class="section-04-note-item">
-					<div></div>
-					<h3 class="h3">Prelúdio</h3>
-					<p class="p">Apartamento na planta ou em construção. Decoração com liberdade e economia!</p>
-				</div>
-				<div class="section-04-note-item">
-					<div></div>
-					<h3 class="h3">Consultoria</h3>
-					<p class="p">Recomendações rápidas e práticas, aproveitando o que já existe.</p>
-				</div>
-			</div>
-
+		<div class="side-midia-item">
+			<a href="" target="_blank">
+				<img src="/images/sideMidia/linkedin.jpeg" alt="linkedin">
+			</a>
 		</div>
-	</section>
+	</div>
 
-	<!-- Section 05 -->
-	<section class="section">
-		<div class="section-05-content-wrapper">
-			<div class="section-05-title">
-				<h2 class="h2">Projetos desenvolvidos...</h2>
-			</div>
-			<div class="section-05-image-container">
-				<div class="section-05-image-row">
 
-					<div class="section-05-box-medium">
-						<img src="../images/gallery/1.jpg" alt="">
-					</div>
+	<div class="sections-container">
+		<!-- Video Section -->
+		<section class="sections" id="video">
+			<div class="video-section-content-wrapper">
+				<video class="video-section-background-video" autoplay loop muted plays-inline>
+					<source src="" type="video/mp4">
+				</video>
 
-					<div class="section-05-box-small"></div>
-
-					<div class="section-05-box-large">
-						<img src="../images/gallery/2.jpg" alt="">
-					</div>
-
-				</div>
-
-				<div class="section-05-image-row">
-
-					<div class="section-05-box-large">
-						<img src="../images/gallery/5.jpg" alt="">
-					</div>
-
-					<div class="section-05-box-small">
-						<img src="../images/gallery/4.jpg" alt="">
-					</div>
-
-					<div class="section-05-box-medium"></div>
-
+				<div class="video-section-text-box">
+					<h2 class="h2">“A casa do presente, que pensa no futuro e recorda do passado”</h2>
+					<p class="p">Nossa proposta é através da empatia cuidar do presente, valorizar a história e as
+						memórias,
+						e respeitar as futuras gerações.</p>
+					<a class="video-section-button">Conheça nossos projetos</a>
 				</div>
 			</div>
-			<a class="section-05-button">Quero meu projeto!</a>
-		</div>
-	</section>
+		</section>
 
+		<!-- About Section -->
+		<section class="sections" id="essence">
+			<div class="about-section-content-wrapper">
+				<div class="about-section-title-container">
+					<h2 class="h2">“A casa do presente, que pensa no futuro e recorda do passado”</h2>
+				</div>
+
+				<div class="about-section-detail-container">
+					<div class="about-section-card-container">
+						<div class="about-section-card">
+							<img src="../images/partners.jpg" alt="Natasha e Hugo">
+						</div>
+
+						<div class="about-section-card">
+							<h3 class="h3">Natasha M. Yamamoto</h3>
+							<img src="../images/character_Natasha.jpg" alt="Natasha Michiko">
+						</div>
+
+						<div class="about-section-card">
+							<img src="../images/character_Hugo.jpg" alt="Hugo Wegner">
+							<h3 class="h3">Hugo W. de Moura Nessler</h3>
+						</div>
+					</div>
+
+					<div class="about-section-text-box">
+						<h3 class="h3">Nossa essência</h3>
+						<div>
+							<p class="p">Nascida de um propósito de vida, a Yamamoto Haus acredita no <span>poder do
+									ambiente</span>
+								em influenciar nossa saúde, bem-estar e comportamento e a <span>natureza</span> é uma
+								grande
+								influência nesse processo.</p>
+							<p class="p">Visto isso, nosso escritório oferece através do <span>design biofílico</span>
+								soluções
+								inteligentes e personalizadas que promovem uma <span>experiência alinhada com a essência
+									de
+									cada indivíduo</span>, seus valores, crenças e estilo de vida, tornando a casa um
+								local que
+								promova saúde, conforto ambiental e bem-estar.</p>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
+
+		<!-- Values Section -->
+		<section class="sections">
+			<div class="values-section-content-wrapper">
+				<img class="values-section-bamboo" src="/images/outros/bambu_1.png" alt="bambu">
+
+				<div class="values-section-text-box">
+					<h2 class="h2">Nossos valores...</h2>
+					<div class="values-section-text-box-item">
+						<img class="values-section-kanjis" src="../images/outros/omoiyari.png" alt="omoiyari">
+						<h3 class="h3">Empatia, cuidado e consideração - <span>omoiyari.</span></h3>
+						<p class="p">Cuidar do presente, das pessoas e de sí mesmo, preservar a vida, criar conexões,
+							valorizar as origens e respeitar as futuras gerações.</p>
+					</div>
+					<div class="values-section-text-box-item">
+						<img class="values-section-kanjis" src="../images/outros/kintsugi.png" alt="kintsugi">
+						<h3 class="h3">Emendar com ouro - <span>kintsugi.</span></h3>
+						<p class="p">Errar é humano. Nossa missão é ressignificar o erro em aprendizado, permitindo a
+							evolução contínua como pessoas e profissionais.</p>
+					</div>
+					<div class="values-section-text-box-item">
+						<img class="values-section-kanjis" src="../images/outros/kansha.png" alt="kansha">
+						<h3 class="h3">Gratidão - <span>kansha.</span></h3>
+						<p class="p">Às pessoas, às oportunidades, ao trabalho, à natureza e à vida, muito obrigado!</p>
+					</div>
+					<div class="values-section-text-box-item">
+						<img class="values-section-kanjis" src="../images/outros/ganbatte.png" alt="ganbatte">
+						<h3 class="h3">Faça o melhor que puder e nunca desista - <span>ganbatte.</span></h3>
+						<p class="p">Seja como o bambu, flexível, e sustente-se nas suas raízes nos momentos de
+							adversidade, e assim como o bambu nas estações chuvosas, cresça (progrida e evolua) em
+							direção ao céu.</p>
+					</div>
+				</div>
+			</div>
+		</section>
+
+		<!-- Services Section -->
+		<section class="sections" id="services">
+			<div class="services-section-content-wrapper">
+				<div class="services-section-text-box">
+					<h2 class="h2">Nossos serviços...</h2>
+					<p class="p">Todos nossos serviços procuram se alinhar com a sua real necessidade de projeto, unindo
+						funcionalidade + estética e claro,<span> você</span>, a chave principal do projeto!</p>
+				</div>
+				<div class="services-section-note-container">
+					<div class="services-section-note-wrapper">
+						<div class="services-section-note-item">
+							<div></div>
+							<h3 class="h3">Reviva Ambientes!</h3>
+							<p class="p">Revitalizar o espaço sem quebra-quebra entregando um ambiente novo e
+								aconchegante.
+							</p>
+						</div>
+						<div class="services-section-note-item">
+							<div></div>
+							<h3 class="h3">Reforma</h3>
+							<p class="p">Reforma de tudo que for necessário e o que o ambiente permitir.</p>
+						</div>
+					</div>
+					<div class="services-section-note-wrapper">
+						<div class="services-section-note-item">
+							<div></div>
+							<h3 class="h3">Prelúdio</h3>
+							<p class="p">Apartamento na planta ou em construção. Decoração com liberdade e economia!</p>
+						</div>
+						<div class="services-section-note-item">
+							<div></div>
+							<h3 class="h3">Consultoria</h3>
+							<p class="p">Recomendações rápidas e práticas, aproveitando o que já existe.</p>
+						</div>
+					</div>
+				</div>
+		</section>
+
+		<!-- Contact Section -->
+		<section class="sections" id="contact">
+			<div class="contact-section-content-wrapper">
+				<img class="contact-section-bamboo" src="/images/outros/bambu_2.png" alt="bambu">
+				<div class="contact-red-ball"></div>
+				<div class="contact-section-details">
+					<h2 class="h2">Entre em contato!</h2>
+					<p class="p">(47) 99148-9924</p>
+					<p class="p">yamamotohaus.interiores@gmail.com</p>
+					<p class="p">R. Euzébio de Queirós, 247 - Glória, Joinville </p>
+				</div>
+			</div>
+		</section>
+	</div>
 	<script src="/js/app.js"></script>
 </body>
+
 </html>
